[package]
name = "md2html"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
comrak = { git = "https://github.com/blood-rogue/comrak.git", features = ["shortcodes"] }
chrono = "0.4.24"
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"]}
toml = "0.7.3"
clap = { version = "4.2.7", features = ["derive"] }
once_cell = "1.17.1"
emojis = "0.6.0"
fancy-regex = "0.11.0"
url = "2.3.1"
css-minify = "0.3.1"
colored = "2.0.0"